# pydantic-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  docker-entrypoint.sh  justfile  mcp_server.py  pyproject.toml
src/pydantic_mcp/: constants.py  helpers.py  models.py  resources.py  runtime.py  server.py  settings.py  tools.py
src/pydantic_mcp_sample_app/: __init__.py
tests/: test_e2e.py  test_mcp_server.py
tests/fixtures/: __init__.py
tests/fixtures/sample_app/: __init__.py  models.py
